	(gdb-memory-set-address, def-gdb-set-positive-number)
	(def-gdb-memory-format, def-gdb-memory-unit): Update memory buffer
	after changing settings.
	(gdb-invalidate-disassembly): Update when first shown.
	(gdb-edit-locals-value): Fixed.
	(gdb-registers-handler-custom): Print registers in right order and
	allow changing register values (only for current thread yet).

2009-08-08  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-add-mbox-headers)
	(rmail-set-message-counters-counter): Search for
	rmail-unix-mail-delimiter instead of just "From ".  (Bug#4076)

2009-08-08  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

2009-08-07  Eli Zaretskii  <eliz@gnu.org>

	* mail/sendmail.el (mail-yank-original): Set
	buffer-file-coding-system from the one used by the message whose
	text is yanked.

	* calc/calc-graph.el (calc-graph-plot): Set calc-graph-last-device
	to "windows" when "pgnuplot" is used.
	(calc-graph-command, calc-gnuplot-command, calc-graph-init): Don't
	call accept-process-output if "pgnuplot" is used.
	(calc-graph-init): Don't send -display and -geometry to
	"pgnuplot".  If "pgnuplot" is used, glean gnuplot version by
	running "pgnuplot -V" with shell-command-to-string.

	* calc/calc.el (calc-gnuplot-name) [windows-nt]: Use "pgnuplot" as
	the default.

2009-08-07  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (ELCFILES): org/org-export-latex.elc renamed to
	org/org-latex.elc.

2009-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dispatcher.el (vc-resynch-window): Update comment.

	* term.el (term-handle-ansi-escape): Add comments with the
	terminfo capabilities implemented.

2009-08-06  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-var-create-regexp): Removed.
	(gdb-var-create-handler): Rewritten using JSON parser.
	(gdb-propertize-header): Moved earlier.
	(gdb-set-header): Removed to avoid duplication.
	(gdb-thread-list-handler-custom, gdb-invalidate-disassembly):